--- a/website/templates/confirmation.html
+++ b/website/templates/confirmation.html
@@ -19,7 +19,7 @@
                     <a href="">Stock 3</a>
                 </div>
             </div>
-            <a href="{{ url_for('home') }}" class="admin-link">Back to Main Page</a>
+            <a href="{{ url_for('home') }}" class="admin-link">Return to Main Page</a>
         </nav>
     </header>
 
