--- a/website/templates/main_page.html
+++ b/website/templates/main_page.html
@@ -10,7 +10,7 @@
 <body>
     <!-- The header and the nav -->
     <header class="header-container">
-        <h1>Title</h1>
+        <h1>Home</h1>
         <nav>
             <div class="dropdown">
                 <button class="dropbtn">AAPL ▼</button>
@@ -26,8 +26,41 @@
 
     <!-- Stock info -->
     <div style="margin-bottom: 50px">
-        <img src="{{ url_for('static', filename='images/placeholder.jpg') }}" class="global-img" alt="placeholder image">
-        <p class="global-img-desc">placeholder image</p>
+        <h2>AAPL Stock Price - By TradingView</h2>
+        <!-- TradingView Widget BEGIN -->
+        <div style="display:flex; justify-content:center; height:80vh; width:95%">
+            <div class="tradingview-widget-container">
+            <div class="tradingview-widget-container__widget"></div>
+            <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/NASDAQ-AAPL/" rel="noopener nofollow" target="_blank"><span class="blue-text">AAPL stock chart</span></a><span class="trademark"> by TradingView</span></div>
+                <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-advanced-chart.js" async>
+                {
+                    "allow_symbol_change": false,
+                    "calendar": false,
+                    "details": false,
+                    "hide_side_toolbar": true,
+                    "hide_top_toolbar": true,
+                    "hide_legend": false,
+                    "hide_volume": true,
+                    "hotlist": false,
+                    "interval": "D",
+                    "locale": "en",
+                    "save_image": false,
+                    "style": "3",
+                    "symbol": "NASDAQ:AAPL",
+                    "theme": "dark",
+                    "timezone": "Asia/Singapore",
+                    "backgroundColor": "#0F0F0F",
+                    "gridColor": "rgba(242, 242, 242, 0.06)",
+                    "watchlist": [],
+                    "withdateranges": false,
+                    "compareSymbols": [],
+                    "studies": [],
+                    "autosize": true
+                }
+                </script>
+            </div>
+        </div>
+        <!-- TradingView Widget END -->
 
         <p>Info 1</p>
         <p>Info 2</p>
