--- a/website/templates/waiting_page.html
+++ b/website/templates/waiting_page.html
@@ -51,6 +51,7 @@
 
         const base_text = "Processing Results";
         const text_list = [
+            "First time loading the model usually takes longer time, so yeah please be patience",
             "Investors are showing signs of fear amid rising volatility.",
             "Optimism grows after strong earnings reports.",
             "Panic selling may be driving prices below fair value.",
