--- a/website/templates/main_page.html
+++ b/website/templates/main_page.html
@@ -77,7 +77,7 @@
     <form action="{{ url_for('get_data') }}" method="post">
         <h2>Stock Market Prediction</h2>
 
-        <div>
+        <div id="input-closing-price">
             <!-- Input number, others will auto fill in during conversion -->
             <label for="price-myr" class="global-label">Enter Today's Closing Price (In MYR):</label>
             <input type="number" id="price-myr" placeholder="RM" step="0.01" class="global-input" name="stockPriceMYR"> <br> <br>
@@ -92,7 +92,20 @@
 
             <p id="loading-msg"></p>
 
+            <!--Display error message-->
             <p>{{ error }}</p>
+            {% if show_error %}
+            <script>
+                const input_section = document.getElementById("input-closing-price");
+                input_section.scrollIntoView({behaviour: "smooth"});
+
+                setTimeout(() => {
+                    const error_msg = {{ error | tojson }}
+                    alert(error_msg);
+                }, 300);
+            </script>
+            {% endif %}
+
         </div>
 
         <br>
@@ -108,7 +121,9 @@
             <button class="global-button", type="submit" id="predict">Predict</button>
 
             <h4>Important: Ensure the info is correct before predicting</h4>
-            <strong style="color: red">Disclaimer Message</strong> <br> <br>
+            <strong style="color: red">The results made by the model are only meant for educational purpose, 
+                do not treat it as confirmation for your trading strategy.
+            </strong> <br> <br>
         </div>
 
         <button class="global-button" type="button" id="scroll-to-top-btn">Back To Top</button>
