--- a/website/templates/nlp_model.html
+++ b/website/templates/nlp_model.html
@@ -1,28 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NLP Model</title>
+{% extends "base.html" %}
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='global_css.css') }}">
-</head>
-<body>
-    <header class="header-container">
-        <h1>NLP Model</h1>
-        <nav>
-            <div class="dropdown">
-                <button class="dropbtn">AAPL ▼</button>
-                <div class="dropdown-content">
-                    <a href="">AAPL</a>
-                    <a href="">Alphabet</a>
-                    <a href="">Stock 3</a>
-                </div>
-            </div>
-            <a href="{{ url_for('home') }}" class="admin-link">Return to User Page</a>
-        </nav>
-    </header>
+{% block head_title%}NLP model{% endblock %}
 
+{% block admin_link %}<a href="{{ url_for('home') }}" class="admin-link"> Return to Main Page</a>{% endblock %}
+
+{% block after_header %}
+<br>
+<a href="{{ url_for('admin.admin_page') }}" class="return-home"> << Back to admin page</a>
+<br>
+{% endblock %}
+
+{% block content %}
+<main>
     <div class="numerical-parameter-info">
         <h3>Parameter used by model</h3>
 
@@ -74,5 +63,5 @@
             Return To Admin Page
         </button>
     </div>
-</body>
-</html>
+</main>
+{% endblock %}
